# ecoforo

./: .gitignore  alembic.ini  ecoforo.db-shm  pyproject.toml
alembic/: env.py
alembic/versions/: 32ef54d2fcba_initial_schema.py
data/: aluminum_model.pkl  copper_model.pkl  gold_model.pkl  model_changelog.md  model_registry.json  oil_model.pkl  silver_model.pkl
data/reports/: 2026-05-31-report.md
ecoforo/: cli.py  config.py  report.py
ecoforo/db/: models.py  session.py
ecoforo/fetchers/: base.py  china_macro.py  fred.py  gdelt.py  investing.py  metals.py  worldbank.py
ecoforo/predict/: analyze.py  auto_train.py  features.py  impact.py  multi_predict.py  predict.py  train.py
ecoforo/processing/: classifier.py
ecoforo/web/: dashboard.py
systemd/: ecoforo-collect.service  ecoforo-collect.timer  ecoforo-retrain.service  ecoforo-retrain.timer
tests/: conftest.py  test_cli.py  test_fetcher_fred.py  test_fetcher_investing.py  test_fetcher_metals.py  test_fetcher_worldbank.py  test_fetchers_base.py
