[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoforo"
version = "0.1.0"
description = "Economic forecasting data pipeline — collect, archive, analyze"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "click>=8.1",
    "streamlit>=1.28",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "fredapi>=0.5",
    "wbdata>=1.0",
    "yfinance>=0.2",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "requests-mock>=1.11",
]

[project.scripts]
ecoforo = "ecoforo.cli:cli"

[tool.setuptools.packages.find]
include = ["ecoforo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
